--- a/style.css
+++ b/style.css
@@ -8,49 +8,73 @@
    --Weights__400: 400;
    --font__family__Open: 'Open Sans', sans-serif;    
    --font__family__Poppins: 'Poppins', sans-serif;
+}
 
-   html{
+
+html{
     box-sizing: border-box;
     font-size: 62.5% ;
-    
+    background-color: black;    
    }
 
-   h1,
-   h2,
-   p{
+h1,
+h2,
+p{
     margin-top: 0;
     line-height: 1.5;
+}
+   
+body{
+    display: grid;
+    place-items: center ;
+
    }
 
-   body{
-    margin: 0;
-    padding: 0;
-    display: grid;
-    place-items: center;
+main{
+    background-color: var(--color__Violet);
+    width: 375px;
+    /* height: 800px; */
+    margin: 175px auto;
     
    }
 
-   main{
-    background-color: var(--color__Violet);
-    margin-top: 175px auto;
+
+
+section img{
+    margin: 60px 40px;
+    width: 300px;
+    position: relative ;
+   
+}
+/* header{
+   position: absolute;
+} */
+header div{
+   position: absolute;
+}
+.background{
+    overflow: hidden;
+    position: relative;
+ 
    }
 
-   .background{
-
-   }
-   .landing__heading{
-
-   }
-   .landing__para{
-
-   }
-   .button{
-
-   }
-   .footer{
+.landing__heading{
+ 
 
    }
 
+.landing__para{
+
+   }
+
+.button{
+
+   }
+
+.footer{
 
 
 }
+
+
+
