--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@
       margin: 10px 132px;
    }
 
-    .social img{
+    .social svg{
       display: inline;
       width:30px;
       height:30px;
@@ -112,9 +112,10 @@
 
    }
 
-   .social img:hover{
-      color: var(--Soft__Magenta);
+   .social svg:hover{
+      fill:var(--Soft__Magenta);
       transition: .5s;
+     
      
    }
 
